terraform/K8S/foo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.4
        args:
        - --source=service # ingress is also possible
        - --domain-filter=mapineda48.xyz # (optional) limit to only example.com domains; change to match the zone created above.
        - --provider=godaddy
        - --txt-prefix=external-dns. # In case of multiple k8s cluster
        - --txt-owner-id=mapineda48 # In case of multiple k8s cluster
        - --godaddy-api-key=gHVQU6Dz57ui_CvFVT9PK2UCcxXKyP3CBcY
        - --godaddy-api-secret=zSwg9k2fA3iEz6fEPdLWJ
