terraform/K8S/test.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapineda48-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              cpu: 200m
              memory: 150M
            requests:
              cpu: 50m
              memory: 50M
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mapineda48-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-services: "mapineda48-service"
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapineda48-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-global
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: www.mapineda48.xyz
spec:
  tls:
    - hosts:
        - www.mapineda48.xyz
      secretName: www-mapineda48-com-tls
  rules:
    - host: www.mapineda48.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mapineda48-service
                port:
                  name: http
